[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/DigitalDisco_thin_x32.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/OptionsMenu.tscn" type="PackedScene" id=4]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )
initial_level = "res://levels/Level01.tscn"

[node name="InitialMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InitialMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -92.0
margin_right = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="InitialMenu/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 66.0
margin_bottom = 22.0
text = "Start"

[node name="OptionsButton" parent="InitialMenu/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 26.0
margin_right = 66.0
margin_bottom = 48.0
text = "Options"

[node name="QuitButton" parent="InitialMenu/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 52.0
margin_right = 66.0
margin_bottom = 74.0
text = "Quit"

[node name="TitleLabel" type="Label" parent="InitialMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 3 )
text = "ENTRE ESPINHOS
E CORDAS"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
visible = false
